feat(web): add PWA support with new favicon set
- Add vite-plugin-pwa for service worker and manifest generation
- Replace SVG favicon with complete PNG/ICO favicon set
- Add theme-color meta tag (#5865F2 Discord blue)
- Update webhook avatar to use new PNG icon

--- a/web/index.html
+++ b/web/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Primary Meta Tags -->
     <title>Discord Stay Online</title>
     <meta name="description" content="Keep your Discord presence online" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#5865F2" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" sizes="48x48" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   </head>
   <body>
     <div id="app"></div>
