--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Keep your Discord presence online" />
 
     <!-- Theme Color -->
-    <meta name="theme-color" content="#5865F2" />
+    <meta name="theme-color" content="#5865f2" />
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" sizes="48x48" />
